shopcloud/manifests/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-dev
  labels:
    shopcloud.shop/environment: dev
